--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 CLOUDINARY_CLOUD_NAME="dqfkbkx7k"
 CLOUDINARY_API_KEY="522869285263186"
 CLOUDINARY_API_SECRET="biFMxHStTtlQLtqa29Dw1c829nE"
-REDIS_URL="redis://default:Jo1NFNfODbunfMYigOqZ5smz1LgpCdYq@redis-14787.c261.us-east-1-4.ec2.redns.redis-cloud.com:14787"
+# REDIS_URL="redis://default:Jo1NFNfODbunfMYigOqZ5smz1LgpCdYq@redis-14787.c261.us-east-1-4.ec2.redns.redis-cloud.com:14787"
